After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705436 - dlna-renderer: Do not expose the dLeyna DBus proxies
dlna-renderer: Do not expose the dLeyna DBus proxies
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-08-04 09:18 UTC by Emanuele Aina
Modified: 2013-08-06 16:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dlna-renderer: Do not expose the dLeyna DBus proxies (5.66 KB, patch)
2013-08-04 09:18 UTC, Emanuele Aina
committed Details | Review

Description Emanuele Aina 2013-08-04 09:18:12 UTC
Instead of a getter for the full GDBusProxy-subclassing objects, provide
a mean to obtain the UDN and drop the three getters.

Actually, three prototypes and one implementation, since I forgot to
commit the _get_push_host()/_get_player() implementations. Ouch.
Comment 1 Emanuele Aina 2013-08-04 09:18:16 UTC
Created attachment 250790 [details] [review]
dlna-renderer: Do not expose the dLeyna DBus proxies

Instead of a getter for the full GDBusProxy-subclassing objects, provide
a mean to obtain the UDN and drop the three getters.

Actually, three prototypes and one implementation, since I forgot to
commit the _get_push_host()/_get_player() implementations. Ouch.
Comment 2 Debarshi Ray 2013-08-06 16:28:02 UTC
Review of attachment 250790 [details] [review]:

Sure!