dlna-renderer: Do not expose the dLeyna DBus proxies

Instead of a getter for the full GDBusProxy-subclassing objects, provide
a mean to obtain the UDN and drop the three getters.

Actually, three prototypes and one implementation, since I forgot to
commit the _get_push_host()/_get_player() implementations. Ouch.

https://bugzilla.gnome.org/show_bug.cgi?id=705436